# rag

./: .gitignore  README.md  __init__.py  main.py  models.py  pipeline.py  pyproject.toml  test_playground.ipynb
chunkers/: chunker.py
conversation/: contextualizer.py  history.py
embedders/: base.py  openai_embedder.py
enrichers/: enricher.py
evaluators/: base.py  llm_evaluator.py
fusion/: README.md  pipeline.py  query_rewriter.py
hybrid/: README.md  pipeline.py
llm/: anthropic_client.py  base.py  gemini_client.py  openai_client.py
parsers/: base.py  docling_parser.py  unstructured_parser.py
rerankers/: __init__.py  base.py  cohere.py  cross_encoder.py
utils/: rrf.py
vectorstores/: base.py  chroma_store.py  pinecone_store.py  qdrant_store.py
