[tool.setuptools]
package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["rag", "rag.*"]

[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "docling>=2.106.0",
    "fastembed>=0.4.0",
    "langchain-community>=0.3.0",
    "langchain-core>=1.4.8",
    "openai>=2.43.0",
    "pinecone>=9.1.0",
    "pinecone-text>=0.9.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.13.0",
    "unstructured[all-docs]>=0.23.1",
]
